# LMCache-Ascend

./: .gitignore  setup.py
.claude/skills/issue-verification-workflow/: SKILL.md
.claude/skills/issue-verification-workflow/scripts/: verify_issue.py
.claude/skills/pr-review/: SKILL.md
csrc/: CMakeLists.txt
examples/disagg_prefill/1p1d/: README.md
examples/disagg_prefill/1p1d/configs/: lmcache-decoder-config.yaml  lmcache-prefiller-config.yaml
examples/kv_cache_reuse/share_across_instances/p2p_sharing/: README.md  example1.yaml  example2.yaml
lmcache_ascend/mindspore/v1/: npu_connector.py
lmcache_ascend/v1/: cache_engine.py
lmcache_ascend/v1/blend/: blender.py
lmcache_ascend/v1/npu_connector/: npu_connectors.py
lmcache_ascend/v1/storage_backend/: p2p_backend.py
lmcache_ascend/v1/transfer_channel/: __init__.py  buffer_config.py  hccl_channel.py  hixl_channel.py
tests/v1/storage_backend/: test_ascend_p2p_backend.py
